Fix mistake when modifying weights.

--- a/src/projects/jan2022/weight-conversion-constructor.njk
+++ b/src/projects/jan2022/weight-conversion-constructor.njk
@@ -23,6 +23,9 @@ value at the moment it ran.
 I think in this case my elegant solution wasn't as simple as I would want, but 
 at the end it works and still have the ability to add as many units as I'd like
 afterwards.
+
+There was a mistake because in the functions I modified the value of weight, but
+all the functions still assumed it was in miligrams. It's now fixed.
 {% endset %}
 
 
