Common Issue correction: Add validation of units

--- a/src/projects/jan2022/weight-conversion-options.njk
+++ b/src/projects/jan2022/weight-conversion-options.njk
@@ -21,6 +21,9 @@ options object.
 
 I'd like to change my units object so that I can handle normal names and also the
 abbreviatures in lowercase. That will be for another day though.
+
+Edit: Watching the common issues, I didn't check that the units given are included
+un my units object. It is now corrected.
 {% endset %}
 
 
